Fixed overflow

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -10,6 +10,7 @@ nav {
 
 #apple-logo {
   max-height: 100%;
+  max-width: 50px;
 }
 
 nav .logo {
