--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 }
 html {
   height: 100%;
+  max-width: 100vw;
 }
 .invisible {
   visibility: hidden;
